test: migrate igTextEditor tests for Knockout

--- a/tests/unit/knockout/editors/igNumericEditor/tests.html
+++ b/tests/unit/knockout/editors/igNumericEditor/tests.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="UTF-8" />
-	<title>Text Editors Knockout extension </title>
+	<title>Numeric Editors Knockout extension </title>
 	<link type="text/css" href="../../../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.popover.css" rel="stylesheet" />
