add Auto ChartType

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -86,6 +86,7 @@
 </template>
 <template class='financialChartTypePicker'>
 	<select class='financialChartTypePicker'>
+		<option value='Auto'>Auto</option>
 		<option value='Bar'>Bar</option>
 		<option value='Line'>Line</option>
 		<option value='Candle'>Candle</option>
