add main control template

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -1,3 +1,12 @@
+<template class='financialChartMainGrid'>
+	<div class='financialChartMainGrid'>
+		<div class='financialChartToolbar'></div>
+		<div class='financialChartPrice'></div>
+		<div class='financialChartIndicators'></div>
+		<div class='financialChartVolume'></div>
+		<div class='financialChartZoomSlider'></div>
+	</div>
+</template>
 <template class='financialChartToolbar'>
 	<div class='financialChartToolbar'>
 		<div class='financialChartIndicatorPicker'></div>
