test: cleanup leftovers in html, $.ready

--- a/tests/unit/rating/common/tests.html
+++ b/tests/unit/rating/common/tests.html
@@ -20,4 +20,15 @@
 
 	<script type="text/javascript" src="rating-test.js"></script>
 </head>
+<body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
+</body>
 </html>
