--- a/tests/unit/util/tests.html
+++ b/tests/unit/util/tests.html
@@ -16,6 +16,18 @@
 	<script type="text/javascript" src="../../../src/js/modules/i18n/regional/infragistics.ui.regional-es.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
+	<script type="text/javascript" src="../common/test-util.js"></script>
 	<script type="text/javascript" src="util-test.js"></script>
 </head>
+<body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
+</body>
 </html>
