--- a/tests/unit/editors/maskEditor/tests.html
+++ b/tests/unit/editors/maskEditor/tests.html
@@ -27,3 +27,16 @@
 	<script type="text/javascript" src="../../common/test-util.js"></script>
 	<script type="text/javascript" src="mask-test.js" ></script>
 </head>
+<body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+	
+	
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
+</body>
+</html>
