--- a/tests/unit/locale/tests.html
+++ b/tests/unit/locale/tests.html
@@ -109,5 +109,14 @@
 	<script type="text/javascript" src="locale-test.js"></script>
 </head>
 <body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
 </body>
 </html>
