--- a/tests/unit/popover/specific/tests.html
+++ b/tests/unit/popover/specific/tests.html
@@ -19,12 +19,14 @@
     <script type="text/javascript" src="specific-test.js"></script>
 </head>
 <body>
-    <div style="float: right; width: 400px; overflow: auto;">
-        <h1 id="qunit-header">Test results</h1>
-        <h2 id="qunit-banner"></h2>
-        <h2 id="qunit-userAgent"></h2>
-        <ol id="qunit-tests"></ol>
-    </div>
-    <div style="clear:both;"></div>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
 </body>
 </html>
