--- a/tests/unit/scroll/events/tests.html
+++ b/tests/unit/scroll/events/tests.html
@@ -25,7 +25,10 @@
 	<script type="text/javascript" src="../../testswarm/inject.js"></script>
 </head>
 <body>
-	<div style="float:right;width:400px;overflow:auto">
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
 		<h1 id="qunit-header">Test results</h1>
 		<h2 id="qunit-banner"></h2>
 		<h2 id="qunit-userAgent"></h2>
