--- a/tests/unit/scroll/tests.html
+++ b/tests/unit/scroll/tests.html
@@ -27,11 +27,14 @@
 	<script type="text/javascript" src="../testswarm/inject.js"></script>
 </head>
 <body>
-<div style="float:right;width:400px;overflow:auto">
-     <h1 id="qunit-header">Test results</h1>
-     <h2 id="qunit-banner"></h2>
-     <h2 id="qunit-userAgent"></h2>
-     <ol id="qunit-tests"></ol>
-</div>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
 </body>
 </html>
