--- a/tests/unit/splitbutton/tests.html
+++ b/tests/unit/splitbutton/tests.html
@@ -21,4 +21,15 @@
     <script type="text/javascript" src="../../../src/js/modules/infragistics.ui.splitbutton.js"></script>
     <script type="text/javascript" src="splitbutton-test.js" ></script>
 </head>
+<body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
+</body>
 </html>
