--- a/tests/unit/templating/tests.html
+++ b/tests/unit/templating/tests.html
@@ -19,15 +19,14 @@
 </head>
 
 <body>
-	<div style="float: right; width: 400px; overflow: auto;">
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
 		<h1 id="qunit-header">Test results</h1>
 		<h2 id="qunit-banner"></h2>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 	</div>
-	<div id="log">
-
-	</div>
 </body>
-
 </html>
