--- a/tests/unit/tilemanager/layoutmanager/tests.html
+++ b/tests/unit/tilemanager/layoutmanager/tests.html
@@ -15,4 +15,15 @@
 		<script type="text/javascript" src="../../common/test-util.js"></script>
 		<script type="text/javascript" src="layoutmanager-test.js"></script>
 </head>
+<body>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
+</body>
 </html>
