--- a/tests/unit/zoombar/tests.html
+++ b/tests/unit/zoombar/tests.html
@@ -58,10 +58,14 @@
 	<script type="text/javascript" src="zoombar-test.js"></script>
 </head>
 <body>
-	<div style="float: right; width: 400px; overflow: auto;">
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
 		<h1 id="qunit-header">Test results</h1>
 		<h2 id="qunit-banner"></h2>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 	</div>
 </body>
+</html>
